Changed the titles

--- a/_notebooks/Foundation/2024-10-06-3.10-Lists-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-06-3.10-Lists-Hacks.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Lists all Hacks\n",
+    "title: 3.10 Lists all Hacks\n",
     "description: All Hacks for Lists\n",
     "categories: [Python]\n",
     "permalink: 3.10/Lists/Hacks\n",
