--- a/_notebooks/Foundation/2024-10-06-3.8-Forloops-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-06-3.8-Forloops-Hacks.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: ForLoops all Hacks\n",
+    "title: 3.8 ForLoops all Hacks\n",
     "description: All Hacks for ForLoops\n",
     "categories: [Python]\n",
     "permalink: 3.8/Forloops/Hacks\n",
