--- a/_notebooks/Foundation/2024-10-07-3.2-Data-Abstaction-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-07-3.2-Data-Abstaction-Hacks.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Data Abstraction all Hacks\n",
+    "title: 3.2 Data Abstraction all Hacks\n",
     "description: All Hacks for Data Abstraction\n",
     "categories: [Python]\n",
     "permalink: /3.2/Data/Abstraction/Hacks\n",
