--- a/_notebooks/Foundation/2024-10-09-3.3-Math-Expressions-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-09-3.3-Math-Expressions-Hacks.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Math Expressions all Hacks\n",
+    "title: 3.3 Math Expressions all Hacks\n",
     "description: all Hacks for Math Expressions\n",
     "categories: [Python]\n",
     "permalink: /3.3/Math/Expressions/Hacks\n",
