--- a/_notebooks/Foundation/2024-10-09-3.5-Boolean-Expressions-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-09-3.5-Boolean-Expressions-Hacks.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Boolean Expressions all Hacks\n",
+    "title: 3.5 Boolean Expressions all Hacks\n",
     "description: all Hacks for Boolean Expressions\n",
     "categories: [Python]\n",
     "permalink: /3.5/Boolean/Expressions/Hacks\n",
