--- a/_notebooks/Foundation/2024-10-10-3.6-Conditionals-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-10-3.6-Conditionals-Hacks.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Conditinals all Hacks\n",
+    "title: 3.6 Conditinals all Hacks\n",
     "description: All hacks for Conditionals\n",
     "categories: [Python]\n",
     "permalink: /3.6/Conditionals/Hacks\n",
