--- a/_notebooks/Foundation/2024-10-10-3.7-Nested-Conditionals-Hacks.ipynb
+++ b/_notebooks/Foundation/2024-10-10-3.7-Nested-Conditionals-Hacks.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Nested Conditinals all type of hacks\n",
+    "title: 3.7 Nested Conditinals all type of hacks\n",
     "description: All hacks for Nested Conditionals\n",
     "categories: [Python]\n",
     "permalink: /3.7/Nested/Conditionals/Hacks\n",
