--- a/_notebooks/Foundation/2024-10-21-Executive-Summary.ipynb
+++ b/_notebooks/Foundation/2024-10-21-Executive-Summary.ipynb
@@ -25,12 +25,12 @@
    "source": [
     "## My final grades\n",
     "\n",
-    "3.1/3.4 - Our lesson \n",
-    "3.2 - 0.89\n",
-    "3.3/3.5 - 0.9\n",
-    "3.6/3.7 - 0.9\n",
-    "3.8 - 0.9 \n",
-    "3.10 - 0.9"
+    "- 3.1/3.4 - Our lesson \n",
+    "- 3.2 - 0.89\n",
+    "- 3.3/3.5 - 0.9\n",
+    "- 3.6/3.7 - 0.9\n",
+    "- 3.8 - 0.9 \n",
+    "- 3.10 - 0.9"
    ]
   },
   {
