added a relevancy checklist

--- a/_notebooks/Foundation/2024-10-21-Executive-Summary.ipynb
+++ b/_notebooks/Foundation/2024-10-21-Executive-Summary.ipynb
@@ -37,6 +37,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Relevancy Checklist**\n",
+    "I made this after looking at everyones comments. \n",
+    "\n",
+    "Assignment | Weightage | Grade | Comments\n",
+    "-- | -- | -- | --\n",
+    "College Board Coverage | 20 | 0.86 | I don't think my lessons really were fully related to college board as I used other sources for information but overall there was a little bit of relation\n",
+    "Python Examples | 15 | 0.9 | My part of the lesson was Javascript but I did a lot of the hacks in python and I think I succeeded on them \n",
+    "JavaScript Examples | 15 | 0.9 | I did a great job creating examples and as well completed the hacks in javascript correctly\n",
+    "Popcorn Hack Usage | 10 | 0.9 | I created many great popcorn hacks for using for future exams or just a way to understand coding overall in the future. It overall helped me learn as well showing me how their are many different languages in coding. \n",
+    "Homework | 10 | 0.9 | Did above and beyond quality work for my submissions\n",
+    "Grading Plan | 10 | 0.9 | Grading guidelines and overall plan was done correctly\n",
+    "Original and Creative | 10 | 0.9 | Added a video for a better understanding and made tables for our text. \n",
+    "Total | 90 | 0.89 | Good effort overall.`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## My understanding for the lesson\n",
     "\n",
     "I feel like I was not one of the most knowledged person in computer science coming into this class. I had many struggles without learning about the different type of coding laguages such as javascript and python. Once we started pacing ourselves for excellence, I started figuring out how many of the similarites and differences of the languages. An example can be as in python and javascript, most of the coding is similar and the one of the main differences is the code to print the output. \n"
