changed title length

--- a/_notebooks/Foundation/2024-10-21-Executive-Summary.ipynb
+++ b/_notebooks/Foundation/2024-10-21-Executive-Summary.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Relevancy Checklist**\n",
+    "## Relevancy Checklist\n",
     "I made this after looking at everyones comments. \n",
     "\n",
     "Assignment | Weightage | Grade | Comments\n",
