added college discussions from the people in the big colleges

--- a/_notebooks/Foundation/2024-12-2-bball-predictions.ipynb
+++ b/_notebooks/Foundation/2024-12-2-bball-predictions.ipynb
@@ -16,7 +16,8 @@
     "permalink: /bball/predictions\n",
     "menu: nav/tools_setup.html\n",
     "toc: true\n",
-    "comments: true"
+    "comments: true\n",
+    "---"
    ]
   },
   {
