completed blog for the final check

--- a/_notebooks/Foundation/2025-1-10-college-discussions.ipynb
+++ b/_notebooks/Foundation/2025-1-10-college-discussions.ipynb
@@ -101,7 +101,7 @@
     "  - *Speaker's Insight*: Building a personal website to showcase projects and progress provides a comprehensive display of skills and experiences.\n",
     "\n",
     "\n",
-    "![alt text](image.png)\n",
+    "![image](image.png)\n",
     "\n",
     "\n",
     "\n",
