completed blog for sprint 5 fully

--- a/_notebooks/Foundation/2025-1-24-final-blog-sprint4.ipynb
+++ b/_notebooks/Foundation/2025-1-24-final-blog-sprint4.ipynb
@@ -12,8 +12,8 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Final Blog for Sprint 4\n",
-    "description: Explanation of Sprint 4 all together\n",
+    "title: Final Blog for Sprint 5\n",
+    "description: Explanation of Sprint 5 all together\n",
     "permalink: /final/blog/sprint4\n",
     "menu: nav/tools_setup.html\n",
     "toc: true\n",
@@ -48,7 +48,7 @@
     "3. Click \"Go\" to see a list of care centers and their locations on a map.\n",
     "\n",
     "#### Code Example:\n",
-    "```javascript\n",
+    "```\n",
     "async function FindLocations() {\n",
     "  const location = document.getElementById(\"location\").value.trim();\n",
     "  const place = document.getElementById(\"place\").value.trim();\n",
@@ -76,7 +76,7 @@
     "### Using Postman\n",
     "Postman is a tool we use to test APIs. Here’s an example:\n",
     "- **Request to Add a Care Center:**\n",
-    "  ```json\n",
+    "  ```\n",
     "  {\n",
     "    \"injury\": \"Fracture\",\n",
     "    \"location\": \"Hospital A\",\n",
@@ -84,7 +84,7 @@
     "  }\n",
     "  ```\n",
     "- **Response:**\n",
-    "  ```json\n",
+    "  ```\n",
     "  {\n",
     "    \"id\": 1,\n",
     "    \"injury\": \"Fracture\",\n",
@@ -99,7 +99,7 @@
     "\n",
     "### Creating a Care Center\n",
     "This code adds a new care center to the database:\n",
-    "```python\n",
+    "```\n",
     "@token_required\n",
     "def post(self):\n",
     "    data = request.get_json()\n",
@@ -113,7 +113,7 @@
     "\n",
     "### Database Queries\n",
     "We use Python to ask the database for information. For example:\n",
-    "```python\n",
+    "```\n",
     "centers = CareCenter.query.filter_by(location=\"Hospital A\").all()\n",
     "return jsonify([center.read() for center in centers])\n",
     "```\n",
@@ -121,11 +121,138 @@
     "\n",
     "---\n",
     "\n",
+    "---\n",
+    "\n",
+    "# CRUD\n",
+    "\n",
+    "**POST**: - Used to create a new resource on the server. For example, submitting a form to add a new user.\n",
+    "\n",
+    "**GET**: - Retrieves data from the server without altering its state. For instance, fetching user details.\n",
+    "\n",
+    "**PUT**: - Replaces an existing resource with new data. If the resource doesn't exist, it can create it. For example, updating a user's profile information.\n",
+    "\n",
+    "**DELETE** - Removes a specified resource from the server, such as deleting a user account.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Creating a Care Center\n",
+    "### This code adds a new care center to the database:\n",
+    "\n",
+    "```\n",
+    "\n",
+    " class _CRUD(Resource):\n",
+    "    @token_required()\n",
+    "    def post(self):\n",
+    "        \"\"\"\n",
+    "        Create a new waypointuser.\n",
+    "        \"\"\"\n",
+    "        # Obtain the current user from the token required setting in the global context\n",
+    "        current_user = g.current_user\n",
+    "        # Obtain the request data sent by the RESTful client API\n",
+    "        data = request.get_json()\n",
+    "\n",
+    "        # Validate the presence of required keys\n",
+    "\n",
+    "        if not data:\n",
+    "            return {'message': 'No input data provided'}, 400\n",
+    "        if 'injury' not in data:\n",
+    "            return {'message': 'Waypoint title is required'}, 400\n",
+    "        if 'location' not in data:\n",
+    "            return {'message': 'Waypoint comment is required'}, 400\n",
+    "        if 'address' not in data:\n",
+    "            data['address'] = {}\n",
+    "        if 'rating' not in data:\n",
+    "            data['rating'] = 5\n",
+    "\n",
+    "        current_user = g.current_user\n",
+    "        # Create a new waypoint object using the data from the request\n",
+    "        waypointsuser = WaypointsUser(data['injury'], data['location'], data['address'], data['rating'], current_user.id)\n",
+    "        # Save the waypoint object using the Object Relational Mapper (ORM) method defined in the model\n",
+    "        waypointsuser.create()\n",
+    "        # Return response to the client in JSON format, converting Python dictionaries to JSON format\n",
+    "        return jsonify(waypointsuser.read())\n",
+    "```\n",
+    "- **What This Does:** It checks if all fields (injury, location, address) are provided and then saves the care center to the database.\n",
+    "\n",
+    "  ## Reading the Care Center\n",
+    "### Users can fetch all the waypoints that belong to them.\n",
+    "    \n",
+    "  ```\n",
+    "    @token_required()\n",
+    "    def get(self):\n",
+    "        \"\"\"\n",
+    "        Retrieve a single waypoint by ID.\n",
+    "        \"\"\"\n",
+    "        # Obtain and validate the request data sent by the RESTful client API\n",
+    "        current_user = g.current_user\n",
+    "        waypointsuser = WaypointsUser.query.filter_by(_user_id=current_user.id)\n",
+    "        if waypointsuser is None:\n",
+    "            return {'message': 'Waypoint not found'}, 404\n",
+    "        # Convert Python object to JSON format \n",
+    "        waypointsusers = waypointsuser.all()\n",
+    "        json_waypointsuser = [waypointsuser.to_dict() for waypointsuser in waypointsusers]\n",
+    "        return jsonify(json_waypointsuser)\n",
+    "\n",
+    "        # Return a JSON restful response to the client\n",
+    "        return jsonify(json_ready)\n",
+    "\n",
+    "```\n",
+    "- **What This Does:** It fetches and returns all waypoints stored for a specific user.\n",
+    "    \n",
+    "\n",
+    "  ## Updating the Care Center\n",
+    "### Allows users to update waypoint details.\n",
+    " ```   \n",
+    "    @token_required()\n",
+    "    def put(self):\n",
+    "        \"\"\"\n",
+    "        Update a waypoint.\n",
+    "        \"\"\"\n",
+    "        # Obtain the current user\n",
+    "        current_user = g.current_user\n",
+    "        # Obtain the request data\n",
+    "        data = request.get_json()\n",
+    "        # Find the current waypoint from the database table(s)\n",
+    "        waypointsuser = WaypointsUser.query.get(data['waypoint_id'])\n",
+    "        if waypointsuser is None:\n",
+    "            return {'message': 'WaypointUser not found'}, 404\n",
+    "        # Update the waypoint\n",
+    "        waypointsuser._rating = data['rating']\n",
+    "        # Save the waypoint\n",
+    "        waypointsuser.update()\n",
+    "        # Return response\n",
+    "        return jsonify(waypointsuser.read())\n",
+    "```\n",
+    "- **What This Does:** Finds a waypoint, updates its details, and saves the changes.  \n",
+    "\n",
+    "  ## Deleting the Care Center\n",
+    "### This function allows users to remove a waypoint they no longer need.\n",
+    "  \n",
+    "``` \n",
+    "    @token_required()\n",
+    "    def delete(self):\n",
+    "        \"\"\"\n",
+    "        Delete a waypoint.\n",
+    "        \"\"\"\n",
+    "        waypoint_id = request.args.get('waypoint_id')\n",
+    "        # Find the current waypoint from the database table(s)\n",
+    "        waypointsuser = WaypointsUser.query.filter_by(id=waypoint_id).first()\n",
+    "        if waypointsuser is None:\n",
+    "            return {'message': 'Waypoint not found'}, 404\n",
+    "        # Delete the waypoint using the ORM method defined in the model\n",
+    "        waypointsuser.delete()\n",
+    "        # Return response\n",
+    "        return jsonify({\"message\": \"Waypoint deleted\"})\n",
+    "```\n",
+    "- **What This Does:** It looks for a specific waypoint by ID and deletes it.\n",
+    "\n",
+    "---\n",
+    "\n",
     "## 4. Working with Code (Algorithms)\n",
     "\n",
     "### Handling User Requests\n",
     "This function sends user data (like an injury) to the server and saves it:\n",
-    "```javascript\n",
+    "```\n",
     "async function postCareCenterData(injury, location, address) {\n",
     "  const postData = { injury, location, address };\n",
     "\n",
@@ -145,6 +272,7 @@
     "  }\n",
     "}\n",
     "```\n",
+    "\n",
     "- **What This Does:** Sends data to the backend and saves it. If there’s an error, it shows a message.\n",
     "\n",
     "---\n",
@@ -182,8 +310,22 @@
     "\n",
     "### Conclusion\n",
     "\n",
-    "The **Wellness Waypoints** project shows how coding can solve real-life problems. It connects users with care centers quickly and efficiently, making the program both useful and practical.\n"
+    "The **Wellness Waypoints** project shows how coding can solve real-life problems. It connects users with care centers quickly and efficiently, making the program both useful and practical.\n",
+    "\n",
+    "\n",
+    "# Link to my checklist\n",
+    "\n",
+    "[Checklist Finale][def]\n",
+    "\n",
+    "\n",
+    "\n",
+    "[def]: https://github.com/users/Kiruthic-Selvakumar/projects/2/views/1?pane=issue&itemId=94804067&issue=Kiruthic-Selvakumar%7Ctravel_frontend%7C43"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
