added groups purpose and my purpose

--- a/_notebooks/Foundation/2025-1-24-final-blog-sprint4.ipynb
+++ b/_notebooks/Foundation/2025-1-24-final-blog-sprint4.ipynb
@@ -25,9 +25,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Introduction\n",
     "\n",
-    "This blog is about **Wellness Waypoints**, a program designed to help people find the nearest care centers (like hospitals or pharmacies) based on their injury and city. \n",
+    "## Groups Purpose \n",
+    "\n",
+    "- Our goal is to create a budget-friendly travel planner that helps travelers find important resources, such as activities, hotels, restaurants, and healthcare facilities while they are away from home.\n",
+    "\n",
+    "## My purpose\n",
+    "\n",
+    "- My purpose is about **Wellness Waypoints**, a program designed to help people find the nearest care centers (like hospitals or pharmacies) based on their injury and city. \n",
     "\n",
     "### Why This Program?\n",
     "The program solves a simple problem: If you’re injured, where can you go for help? It finds the best places near you and shows them on a map. \n",
