completed everything for blog

--- a/_notebooks/Foundation/2025-1-24-final-blog-sprint4.ipynb
+++ b/_notebooks/Foundation/2025-1-24-final-blog-sprint4.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 2. Input/Output Demonstrations\n",
+    "## 2. Input/Output Demonstrations/(JSON) from API into DOM\n",
     "\n",
     "### What Happens on the Website?\n",
     "Users can:\n",
@@ -53,26 +53,86 @@
     "3. Click \"Go\" to see a list of care centers and their locations on a map.\n",
     "\n",
     "#### Code Example:\n",
+    "```js\n",
+    "\n",
+    "  async function FindLocations() {\n",
+    "    const location = document\n",
+    "      .getElementById(\"location\")\n",
+    "      .value.trim()\n",
+    "      .replace(/\\s+/g, \"+\");\n",
+    "    const place = document\n",
+    "      .getElementById(\"place\")\n",
+    "      .value.trim()\n",
+    "      .replace(/\\s+/g, \"+\");\n",
+    "\n",
+    "    if (!place) {\n",
+    "      alert(\"Please enter a valid city.\");\n",
+    "      return;\n",
+    "    }\n",
+    "\n",
+    "    const url = `https://nominatim.openstreetmap.org/search?q=${location}+in+${place}&format=json&addressdetails=1&limit=10`;\n",
+    "    ```\n",
+    "\n",
+    "\n",
+    "    ```\n",
+    "  function checkinCareLocation(title) {\n",
+    "    const location = document\n",
+    "      .getElementById(\"location\")\n",
+    "      .value.trim();\n",
+    "    const place = document\n",
+    "      .getElementById(\"place\")\n",
+    "      .value.trim();\n",
+    "    const injury = document\n",
+    "      .getElementById(\"injury\")\n",
+    "      .value.trim();\n",
+    "\n",
+    "    postCareCenterData(injury, location, title);\n",
+    "\n",
+    "    alert(`Checked in for:${injury} to ${location} \\nlocated in city:${place} \\nat address:${title}`);   \n",
+    "    console.log(`Checked in for:${injury} to ${location} \\nlocated in city:${place} \\nat address:${title}`);\n",
+    "\n",
+    "    getCareCenterData(currentUserID);\n",
+    "\n",
+    "  }\n",
     "```\n",
-    "async function FindLocations() {\n",
-    "  const location = document.getElementById(\"location\").value.trim();\n",
-    "  const place = document.getElementById(\"place\").value.trim();\n",
-    "\n",
-    "  const url = `https://nominatim.openstreetmap.org/search?q=${location}+in+${place}&format=json&addressdetails=1&limit=10`;\n",
-    "\n",
-    "  const response = await fetch(url);\n",
-    "  const data = await response.json();\n",
-    "\n",
-    "  data.forEach((place, index) => {\n",
-    "    const row = `<tr>\n",
-    "        <td>${index + 1}</td>\n",
-    "        <td>${place.display_name.split(\",\")[0]}</td>\n",
-    "        <td>${place.display_name}</td>\n",
-    "        <td>${place.lat}, ${place.lon}</td>\n",
-    "      </tr>`;\n",
-    "    document.querySelector(\"#resultsTable tbody\").innerHTML += row;\n",
-    "  });\n",
+    "```js\n",
+    "if (data.length === 0) {\n",
+    "    const noResultsRow = document.createElement(\"tr\");\n",
+    "    noResultsRow.innerHTML = `<td colspan=\"6\">No care center check-ins available.</td>`;\n",
+    "    carecenterTable.appendChild(noResultsRow);\n",
+    "    return;\n",
     "}\n",
+    "\n",
+    "const row = document.createElement(\"tr\");\n",
+    "row.innerHTML = `\n",
+    "    <td>${index + 1}</td>\n",
+    "    <td>${waypoint.injury}</td>\n",
+    "    <td>${waypoint.location}</td>\n",
+    "    <td>${waypoint.address}</td>\n",
+    "    <td>\n",
+    "        <div class=\"ratings\">\n",
+    "            ${[1, 2, 3, 4, 5]\n",
+    "                .map((rating) => `\n",
+    "                    <span \n",
+    "                        class=\"rating-star \n",
+    "                        ${rating <= waypoint.rating ? \n",
+    "                            (rating <= 2 ? \"red\" : rating <= 4 ? \"yellow\" : \"green\") : \"\"} \n",
+    "                        ${rating <= waypoint.rating ? \"active\" : \"\"}\" \n",
+    "                        data-rating=\"${rating}\" \n",
+    "                        data-waypointid=\"${waypoint.id}\">\n",
+    "                        &#9733;\n",
+    "                    </span>\n",
+    "                `)\n",
+    "                .join(\"\")}\n",
+    "        </div>\n",
+    "    </td>\n",
+    "    <td>\n",
+    "        <button class=\"checkout-button\" data-waypointid=\"${waypoint.id}\">\n",
+    "            Check Out\n",
+    "        </button>\n",
+    "    </td>\n",
+    "`;\n",
+    "\n",
     "```\n",
     "- **What This Does:** This code takes the user’s input, asks a website (API) for care center locations, and shows the results in a table.\n",
     "\n",
@@ -81,7 +141,7 @@
     "### Using Postman\n",
     "Postman is a tool we use to test APIs. Here’s an example:\n",
     "- **Request to Add a Care Center:**\n",
-    "  ```\n",
+    "  ```py\n",
     "  {\n",
     "    \"injury\": \"Fracture\",\n",
     "    \"location\": \"Hospital A\",\n",
@@ -89,7 +149,7 @@
     "  }\n",
     "  ```\n",
     "- **Response:**\n",
-    "  ```\n",
+    "  ```py\n",
     "  {\n",
     "    \"id\": 1,\n",
     "    \"injury\": \"Fracture\",\n",
@@ -104,7 +164,7 @@
     "\n",
     "### Creating a Care Center\n",
     "This code adds a new care center to the database:\n",
-    "```\n",
+    "```py\n",
     "@token_required\n",
     "def post(self):\n",
     "    data = request.get_json()\n",
@@ -118,7 +178,7 @@
     "\n",
     "### Database Queries\n",
     "We use Python to ask the database for information. For example:\n",
-    "```\n",
+    "```js\n",
     "centers = CareCenter.query.filter_by(location=\"Hospital A\").all()\n",
     "return jsonify([center.read() for center in centers])\n",
     "```\n",
@@ -126,7 +186,6 @@
     "\n",
     "---\n",
     "\n",
-    "---\n",
     "\n",
     "# CRUD\n",
     "\n",
@@ -143,7 +202,7 @@
     "## Creating a Care Center\n",
     "### This code adds a new care center to the database:\n",
     "\n",
-    "```\n",
+    "```py\n",
     "\n",
     " class _CRUD(Resource):\n",
     "    @token_required()\n",
@@ -182,7 +241,7 @@
     "  ## Reading the Care Center\n",
     "### Users can fetch all the waypoints that belong to them.\n",
     "    \n",
-    "  ```\n",
+    "  ```py\n",
     "    @token_required()\n",
     "    def get(self):\n",
     "        \"\"\"\n",
@@ -201,13 +260,13 @@
     "        # Return a JSON restful response to the client\n",
     "        return jsonify(json_ready)\n",
     "\n",
-    "```\n",
+    "  ```\n",
     "- **What This Does:** It fetches and returns all waypoints stored for a specific user.\n",
     "    \n",
     "\n",
     "  ## Updating the Care Center\n",
     "### Allows users to update waypoint details.\n",
-    " ```   \n",
+    " ```py  \n",
     "    @token_required()\n",
     "    def put(self):\n",
     "        \"\"\"\n",
@@ -233,7 +292,7 @@
     "  ## Deleting the Care Center\n",
     "### This function allows users to remove a waypoint they no longer need.\n",
     "  \n",
-    "``` \n",
+    "```py \n",
     "    @token_required()\n",
     "    def delete(self):\n",
     "        \"\"\"\n",
@@ -253,11 +312,11 @@
     "\n",
     "---\n",
     "\n",
-    "## 4. Working with Code (Algorithms)\n",
+    "## 4. Call to Algorithm request(Algorithms)\n",
     "\n",
     "### Handling User Requests\n",
     "This function sends user data (like an injury) to the server and saves it:\n",
-    "```\n",
+    "```js\n",
     "async function postCareCenterData(injury, location, address) {\n",
     "  const postData = { injury, location, address };\n",
     "\n",
