Added 4 college board requiremnts

--- a/_notebooks/Foundation/2025-1-24-final-blog-sprint4.ipynb
+++ b/_notebooks/Foundation/2025-1-24-final-blog-sprint4.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 2. Input/Output Demonstrations/(JSON) from API into DOM\n",
+    "## 2. Input/Output Demonstrations/List Requests\n",
     "\n",
     "### What Happens on the Website?\n",
     "Users can:\n",
@@ -186,8 +186,9 @@
     "\n",
     "---\n",
     "\n",
+    "# Algorithmic code request\n",
     "\n",
-    "# CRUD\n",
+    "## CRUD\n",
     "\n",
     "**POST**: - Used to create a new resource on the server. For example, submitting a form to add a new user.\n",
     "\n",
