Images for blogs

--- a/_notebooks/Foundation/2025-3-2-night-museum.ipynb
+++ b/_notebooks/Foundation/2025-3-2-night-museum.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "At Night at the Museum, I got to check out this really cool crypto project. The team built a website where you can practice buying and selling different cryptocurrencies without using real money. What I thought was super interesting was their crypto mining feature - they showed different graphics cards you could use for mining and had graphs that showed how much money you could make or lose. The best part was how they made everything easy to understand. Their homepage shows the top crypto prices with graphs that move in real-time, and you can pick how much you want to invest in any crypto you're interested in. They also included tools that help you figure out if mining crypto would be worth it, considering stuff like electricity costs and which graphics cards work best. They could work on simplifying the website a bit for users to navigate a little easier\n",
     "\n",
-    "![Crypto Blog](images/crypto.jpeg)"
+    "<img src=\"../images/crypto.jpeg\" alt=\"Crypto Blog\" width=\"300\">"
    ]
   },
   {
@@ -35,10 +35,7 @@
     "\n",
     "At Night at the Museum, I had the chance to play Platformer 4X, a creative and challenging game where players navigate through levels by jumping, dodging obstacles, and collecting points. The game stood out for its smooth and responsive controls, making it easy to pick up but still offering a challenge. The level designs were unique, increasing in difficulty and keeping the gameplay fresh. One of the best features was the leaderboard system, which lets players compete for high scores, adding a fun and competitive element. The animations and visual effects were simple but effective, making the game feel polished. However, a few areas could be improved, such as enhancing the background and UI, adjusting the jump physics for smoother movement, and possibly adding more enemy types or power-ups to keep things exciting.\n",
     "\n",
-    "\n",
-    "<img src=\"{{site.baseurl}}images/platformer.png\">\n",
-    "\n",
-    "![Platformer](/images/image.png)"
+    "<img src=\"../images/platformer.png\" alt=\"Platformer\" width=\"300\">"
    ]
   },
   {
@@ -53,7 +50,7 @@
     "\n",
     "At Night at the Museum, I explored Neptune, a website that helps students find and join clubs easily. The site has a clean design and smooth navigation, making it simple to browse clubs, read descriptions, and find contact info. A great feature is the  leadership application system, which allows students to apply for positions directly. One improvement could be adding a more engaging theme to make the site visually appealing. The club pages could also be more interactive, with features like event updates or messaging. A personalized recommendation system based on student interests would also be a useful addition. Overall, Neptune is a great tool for organizing student involvement. With a few design updates and extra features, it could be even better! \n",
     "\n",
-    "<img src=\"{{site.baseurl}}images/neptune.jpeg\">"
+    "<img src=\"../images/neptune.jpeg\" alt=\"Neptune\" width=\"300\">"
    ]
   }
  ],
