--- a/_notebooks/Foundation/2025-3-2-night-museum.ipynb
+++ b/_notebooks/Foundation/2025-3-2-night-museum.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "---\n",
     "layout: post\n",
@@ -12,7 +16,8 @@
     "menu: nav/tools_setup.html\n",
     "toc: true\n",
     "comments: true \n",
-    "---"
+    "---\n",
+    "\n"
    ]
   },
   {
