fixed up my blog to hasve any last images show

--- a/_notebooks/Foundation/2025-3-1-MCQ-corrections.ipynb
+++ b/_notebooks/Foundation/2025-3-1-MCQ-corrections.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "# Big Ideas to work on \n",
     "\n",
-    " <img src=\"../images/alldeas.png\" alt=\"All Big Ideas\" width=\"700\">\n"
+    " <img src=\"../images/allideas.png\" alt=\"All Ideas\" width=\"700\">\n"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "source": [
     "# Corrections # 11\n",
     "\n",
-    " <img src=\"../images/Ivory.png\" alt=\"All Big Ideas\" width=\"700\">\n",
+    " <img src=\"../images/Ivory.png\" alt=\"Ivory\" width=\"700\">\n",
     "\n",
     "## Explanation\n",
     "The correct answer is Ivory because the binary RGB triplet (11111111, 11111111, 11110000) converts to decimal as (255, 255, 240). Looking at the table, this matches the RGB values listed for Ivory. The incorrect choice, Vivid Yellow, has an RGB triplet of (255, 255, 14), which does not match the given binary values. The mistake likely happened due to misreading the last value in the triplet.\n",
@@ -89,7 +89,7 @@
     "# Correction # 12 \n",
     "\n",
     "\n",
-    " <img src=\"../images/Indigo.png\" alt=\"All Big Ideas\" width=\"700\">\n",
+    " <img src=\"../images/Indigo.png\" alt=\"Indigo\" width=\"700\">\n",
     "\n",
     "## Explanation \n",
     "The correct answer is C (01001011, 00000000, 10000010) because the RGB triplet for indigo is (75, 0, 130). When converted to binary, 75 becomes 01001011, 0 remains 00000000, and 130 becomes 10000010. The incorrect answer, A (00100101, 00000000, 10000010), represents (37, 0, 130) instead of (75, 0, 130), making it the wrong choice. The mistake likely happened due to an incorrect binary conversion of 75."
@@ -133,9 +133,9 @@
    "source": [
     "# Correction # 66\n",
     "\n",
-    " <img src=\"../images/line5n9.png\" alt=\"All Big Ideas\" width=\"700\">\n",
+    " <img src=\"../images/line5n9.png\" alt=\"Line5n9\" width=\"700\">\n",
     "\n",
-    "  <img src=\"../images/66answer.png\" alt=\"All Big Ideas\" width=\"700\">\n",
+    "  <img src=\"../images/66answer.png\" alt=\"66answer\" width=\"700\">\n",
     "\n",
     "## Explanation\n",
     "The correct answer is Line 5 and Line 9 because both lines cause errors in the program's logic. Line 5 incorrectly increases the count for every number, even if it's not perfect, which leads to an inflated count. Line 9 increments currentNum again inside the IF statement, causing the loop to skip numbers whenever a perfect number is found. Since Line 11 already increments currentNum, removing Line 9 ensures every number is checked properly. By removing these two lines, the program correctly counts only perfect numbers and ensures all numbers in the range are considered.\n"
@@ -147,7 +147,7 @@
    "source": [
     "# Correction # 67\n",
     "\n",
-    " <img src=\"../images/findnum.png\" alt=\"All Big Ideas\" width=\"700\">\n",
+    " <img src=\"../images/findnum.png\" alt=\"findnum\" width=\"700\">\n",
     "\n",
     " ## Explanation \n",
     "The correct answers are A and B because the NumOccurrences function does not correctly count the occurrences in these cases. In Option A, the issue is that the count variable is being reset to 0 at the start of every loop iteration instead of keeping a running total. This mistake causes only the last occurrence of \"birch\" to be counted, leading to an incorrect return value. In Option B, the function fails to properly track the occurrences of \"maple\", likely due to incorrect logic in the counting process. Since \"maple\" only appears once, the function might not correctly recognize or store the count. Both of these errors stem from faulty logic that prevents the function from maintaining a cumulative count throughout the entire list.\n",
