--- a/_notebooks/Foundation/2025-3-1-big-ideas.ipynb
+++ b/_notebooks/Foundation/2025-3-1-big-ideas.ipynb
@@ -115,10 +115,9 @@
     "- Location\n",
     "- Rating\n",
     "- User ID\n",
-    "- Whenever a POST, PUT, or DELETE request is made, the database is updated.\n",
+    "- Whenever a POST, PUT, or DELETE request is made, the database is updated. \n",
     "\n",
-    "\n",
-    "<img src=\"../images/database.png\" alt=\"Database\" width=\"500\">\n"
+    "<img src=\"../images/database.png\" alt=\"Database\" width=\"700\">\n"
    ]
   },
   {
@@ -170,7 +169,7 @@
     "- Users enter the domain name → DNS resolves it to the server IP.\n",
     "\n",
     "\n",
-    "<img src=\"../images/cockpit.png\" alt=\"Cockpit\" width=\"500\">"
+    "<img src=\"../images/cockpit.png\" alt=\"Cockpit\" width=\"700\">"
    ]
   },
   {
@@ -207,7 +206,8 @@
     "        waypoint.create()\n",
     "        return jsonify(waypoint.read())\n",
     "    except Exception as e:\n",
-    "        return {'message': f'Error saving waypoint: {e}'}, 500\n"
+    "        return {'message': f'Error saving waypoint: {e}'}, 500\n",
+    "```"
    ]
   },
   {
@@ -216,8 +216,17 @@
    "source": [
     "## Security Measures\n",
     "### 1. CORS Configuration\n",
-    "- Only requests from the frontend domain are allowed. My teamate has set this up so that the only domain that can send API requests to the backend is https://kiruthic-selvakumar.github.io\n",
-    "\n",
+    "- Only requests from the frontend domain are allowed. My teamate has set this up so that the only domain that can send API requests to the backend is https://kiruthic-selvakumar.github.io\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
     "```\n",
     "location / {\n",
     "    proxy_pass http://localhost:8101;\n",
@@ -227,9 +236,15 @@
     "        return 204;\n",
     "    }\n",
     "}\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. HTTPS Enforcement\n",
-    "- Certbot was used to enable SSL encryption.\n"
+    "- Certbot was used to enable SSL encryption."
    ]
   },
   {
@@ -238,12 +253,13 @@
    "source": [
     "## Monitoring & Logging\n",
     "- To track API errors, error handling was implemented.\n",
+    "\n",
     "```py\n",
     "if not data or 'injury' not in data:\n",
     "    return {'message': 'Injury type is required'}, 400\n",
     "```\n",
     "\n",
-    "<img src=\"../images/carecenter.png\" alt=\"Care Center\" width=\"500\">\n"
+    "<img src=\"../images/carecenter.png\" alt=\"Care Center\" width=\"700\">\n"
    ]
   },
   {
