--- a/_notebooks/Foundation/2025-3-1-night-museum.ipynb
+++ b/_notebooks/Foundation/2025-3-1-night-museum.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Our Presentatiom\n",
+    "# Our Presentation\n",
     "\n",
     "<img src=\"../images/pres1.png\" alt=\"Pres 1\" width=\"500\">\n",
     "\n",
