--- a/_notebooks/Foundation/2025-3-1-DOCSE-things.ipynb
+++ b/_notebooks/Foundation/2025-3-1-DOCSE-things.ipynb
@@ -226,7 +226,7 @@
     }
    },
    "source": [
-    "# 3. Backend XII Engineer/customizing backend UI and creating screens for admin functions\n",
+    "# 3. Backend XII Engineer/customizing backend website and creating screens for admin functions\n",
     "<img src=\"../images/backend.png\" alt=\"InterTravel Deployed Backend\" width=\"700\">"
    ]
   },
