--- a/_notebooks/Foundation/2025-3-1-feature-writeup.ipynb
+++ b/_notebooks/Foundation/2025-3-1-feature-writeup.ipynb
@@ -66,7 +66,8 @@
     "        })\n",
     "    });\n",
     "    return await response.json();\n",
-    "}\n"
+    "}\n",
+    "```"
    ]
   },
   {
@@ -79,12 +80,23 @@
     "\n",
     "```python \n",
     "# Backend: Storing waypoints (check-in) data in a database model\n",
-    "class WaypointsUser(db.Model):\n",
-    "    id = db.Column(db.Integer, primary_key=True)\n",
-    "    injury = db.Column(db.String(100), nullable=False)\n",
-    "    location = db.Column(db.String(100), nullable=False)\n",
-    "    address = db.Column(db.String(255), nullable=False)\n",
-    "    rating = db.Column(db.Integer, default=5)\n"
+    "@token_required()\n",
+    "def get(self):\n",
+    "    \"\"\"\n",
+    "    Retrieve a single waypoint by ID.\n",
+    "    \"\"\"\n",
+    "    # Obtain and validate the request data sent by the RESTful client API\n",
+    "    current_user = g.current_user\n",
+    "    waypointsuser = WaypointsUser.query.filter_by(_user_id=current_user.id)\n",
+    "\n",
+    "    if waypointsuser is None:\n",
+    "        return {'message': 'Waypoint not found'}, 404\n",
+    "\n",
+    "    # Convert Python object to JSON format \n",
+    "    waypointsusers = waypointsuser.all()\n",
+    "    json_waypointsuser = [waypointsuser.to_dict() for waypointsuser in waypointsusers]\n",
+    "    \n",
+    "    return jsonify(json_waypointsuser)\n"
    ]
   },
   {
@@ -106,7 +118,8 @@
     "    return {\n",
     "        \"rating\": waypoint.rating if waypoint else None,\n",
     "        \"total_ratings\": WaypointsUser.query.filter_by(address=address).count()\n",
-    "    }\n"
+    "    }\n",
+    "```"
    ]
   },
   {
@@ -153,6 +166,7 @@
     "\n",
     "- When retrieving check-ins, the system loops through database records to display all available data.\n",
     "- Ratings are dynamically updated based on user feedback.\n",
+    "\n",
     "\n",
     "```py\n",
     "def get_facility_ratings():\n",
@@ -210,7 +224,8 @@
     "            else star.classList.add('green');        // 5 stars = green (good rating)\n",
     "        }\n",
     "    });\n",
-    "}\n"
+    "}\n",
+    "```"
    ]
   },
   {
