--- a/_notebooks/Foundation/2025-3-1-night-museum.ipynb
+++ b/_notebooks/Foundation/2025-3-1-night-museum.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "“very nice site but maybe explain a little basic backend”\n",
     "“More Color would be inviting and aesthetic”\n",
-    "“add the address to each location like hotels”\n",
+    "“Have the map take your location and take me to a location”\n",
     "“I think admins shouldn’t be able to delete review"
    ]
   }
