--- a/_notebooks/Foundation/2025-03-21-digital-divide.ipynb
+++ b/_notebooks/Foundation/2025-03-21-digital-divide.ipynb
@@ -27,7 +27,7 @@
         }
       },
       "source": [
-        "# Popcorn Hack 1\n",
+        "**Popcorn Hack 1**\n",
         "Popcorn Hack: Example Problem in MCQ\n",
         "Question: Which of the following actions are likely to be helpful in reducing the digital divide? Select two answers.\n",
         "\n",
@@ -47,7 +47,7 @@
         }
       },
       "source": [
-        "# Popcorn hack 2\n",
+        "**Popcorn hack 2**\n",
         "\n",
         "How would you attempt to fix the digital divide or prevent it from being as prevalent in our community? What are some things that are already being done? What are some things we can add? Explain.\n",
         "\n",
@@ -60,7 +60,7 @@
         "id": "CUwV6JjZboQc"
       },
       "source": [
-        "# Digital Divide Homework"
+        "**Digital Divide Homework**"
       ]
     },
     {
